// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > should render 1`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-t0fqin"
    type="horizontal"
  />
</DocumentFragment>
`;

exports[`Divider > should render a dashed 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-pvb4ee"
    type="horizontal"
  />
</div>
`;

exports[`Divider > should render horizontal type 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-t0fqin"
    type="horizontal"
  />
</div>
`;

exports[`Divider > should render horizontal with size default 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-t0fqin"
    type="horizontal"
  />
</div>
`;

exports[`Divider > should render horizontal with size lg 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-t0fqin"
    type="horizontal"
  />
</div>
`;

exports[`Divider > should render horizontal with size md 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-t0fqin"
    type="horizontal"
  />
</div>
`;

exports[`Divider > should render horizontal with size sm 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-t0fqin"
    type="horizontal"
  />
</div>
`;

exports[`Divider > should render horizontal with size xl 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-t0fqin"
    type="horizontal"
  />
</div>
`;

exports[`Divider > should render vertical type 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
    type="vertical"
  />
</div>
`;

exports[`Divider > should render vertical with size default 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
    type="vertical"
  />
</div>
`;

exports[`Divider > should render vertical with size lg 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-132iid3"
    type="vertical"
  />
</div>
`;

exports[`Divider > should render vertical with size md 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
    type="vertical"
  />
</div>
`;

exports[`Divider > should render vertical with size sm 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ginesk"
    type="vertical"
  />
</div>
`;

exports[`Divider > should render vertical with size xl 1`] = `
<div>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ya0jcf"
    type="vertical"
  />
</div>
`;
